{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 21,
  "lineage": "3312b7f5-359b-e863-3ca4-323ebcc46c0a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app-instance",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins-instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07ae4f0fa498eede9",
            "arn": "arn:aws:ec2:ap-south-1:960920920983:instance/i-0a41a3c44cd96c651",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "jenkins-role",
            "id": "i-0a41a3c44cd96c651",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykeypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09a08e3bf2f4128ef",
            "private_dns": "ip-10-0-1-133.ap-south-1.compute.internal",
            "private_ip": "10.0.1.133",
            "public_dns": "ec2-13-126-68-132.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.126.68.132",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-018ad3bead0c26fca",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01bf1f3f8e9ca59ca",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0023f1d2b041dbc2d"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.jenkins-role",
            "aws_iam_role.jenkins-role",
            "aws_key_pair.mykeypair",
            "aws_security_group.jenkins-securitygroup",
            "aws_subnet.main-public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0101b6b2030274c2e",
            "owner_id": "960920920983",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-0051284967b11f86c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e887d8c35ac4cc6a",
            "owner_id": "960920920983",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0101b6b2030274c2e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-public-1"
            },
            "vpc_id": "vpc-0051284967b11f86c"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-1-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09a3cd34a99401a2d",
            "route_table_id": "rtb-0e887d8c35ac4cc6a",
            "subnet_id": "subnet-01bf1f3f8e9ca59ca"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-public",
            "aws_subnet.main-public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-2-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0edc36ea155b5cd86",
            "route_table_id": "rtb-0e887d8c35ac4cc6a",
            "subnet_id": "subnet-0833ae95b8f9ac08b"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-public",
            "aws_subnet.main-public-2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app-securitygroup",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:960920920983:security-group/sg-09346122ca20b1d98",
            "description": "security group that allows ssh and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09346122ca20b1d98",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "app-securitygroup",
            "name_prefix": null,
            "owner_id": "960920920983",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app-securitygroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0051284967b11f86c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins-securitygroup",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:960920920983:security-group/sg-0023f1d2b041dbc2d",
            "description": "security group that allows ssh and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0023f1d2b041dbc2d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "jenkins-securitygroup",
            "name_prefix": null,
            "owner_id": "960920920983",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jenkins-securitygroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0051284967b11f86c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:960920920983:subnet/subnet-01d1eb39ba485661c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-01d1eb39ba485661c",
            "map_public_ip_on_launch": false,
            "owner_id": "960920920983",
            "tags": {
              "Name": "main-private-1"
            },
            "vpc_id": "vpc-0051284967b11f86c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:960920920983:subnet/subnet-055274e9c0a0fa874",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-055274e9c0a0fa874",
            "map_public_ip_on_launch": false,
            "owner_id": "960920920983",
            "tags": {
              "Name": "main-private-2"
            },
            "vpc_id": "vpc-0051284967b11f86c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:960920920983:subnet/subnet-01bf1f3f8e9ca59ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-01bf1f3f8e9ca59ca",
            "map_public_ip_on_launch": true,
            "owner_id": "960920920983",
            "tags": {
              "Name": "main-public-1"
            },
            "vpc_id": "vpc-0051284967b11f86c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:960920920983:subnet/subnet-0833ae95b8f9ac08b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0833ae95b8f9ac08b",
            "map_public_ip_on_launch": true,
            "owner_id": "960920920983",
            "tags": {
              "Name": "main-public-2"
            },
            "vpc_id": "vpc-0051284967b11f86c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:960920920983:vpc/vpc-0051284967b11f86c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00fb37d8e688e1021",
            "default_route_table_id": "rtb-091edeb1459b28f27",
            "default_security_group_id": "sg-0e028fecbcbc2be9b",
            "dhcp_options_id": "dopt-f20e8b9a",
            "enable_classiclink": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0051284967b11f86c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-091edeb1459b28f27",
            "owner_id": "960920920983",
            "tags": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}